# RichelieuRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/PBR/: PBR.cpp
examples/ray_tracing/: ray_tracing.cpp
examples/viking_room/: viking_room.cpp
include/: Camera.hpp  GUI.h  VulkanApplicationBase.h  VulkanBuffer.h  VulkanDevice.h  VulkanModel.h  VulkanRayTracingApplicationBase.h  VulkanSwapchain.h  VulkanTexture.h  VulkanTools.h
shaders/PBR/: frag.spv  shader.frag  shader.vert  vert.spv
shaders/skybox/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
shaders/viking_room/: frag.spv  shader.frag  shader.vert  vert.spv
src/: VulkanApplicationBase.cpp  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanModel.cpp  VulkanRayTracingApplicationBase.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp  VulkanTools.cpp
